force-app/main/default/objects/SharePoint_File_Tracking__c/SharePoint_File_Tracking__c.object-meta.xml
<CustomObject>
    <description>Tracks SharePoint files that have been detected and processed for contract data extraction.</description>
    <label>SharePoint File Tracking</label>
    <nameField>
        <label>File Tracking Name</label>
        <type>AutoNumber</type>
        <displayFormat>FILE-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>SharePoint File Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>