force-app/main/default/objects/SharePoint_File_Tracking__c/fields/Contract_Document__c.field-meta.xml
<CustomField>
    <fullName>Contract_Document__c</fullName>
    <label>Contract Document</label>
    <referenceTo>Contract_Document__c</referenceTo>
    <relationshipLabel>SharePoint File Tracking</relationshipLabel>
    <relationshipName>SharePoint_File_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>