force-app/main/default/objects/SharePoint_File_Tracking__c/fields/Drive_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Id__c</fullName>
    <label>Drive ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>