force-app/main/default/objects/SharePoint_File_Tracking__c/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>