force-app/main/default/objects/SharePoint_File_Tracking__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>