force-app/main/default/objects/SharePoint_File_Tracking__c/fields/SharePoint_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>SharePoint Item ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>